src/test/ui/label/label_break_value_continue.stderr
error[E0695]: unlabeled `continue` inside of a labeled block
  --> $DIR/label_break_value_continue.rs:6:9
   |
LL |         continue;
   |         ^^^^^^^^ `continue` statements that would diverge to or through a labeled block need to bear a label

error[E0696]: `continue` pointing to a labeled block
  --> $DIR/label_break_value_continue.rs:13:9
   |
LL | /     'b: {
LL | |         continue 'b;
   | |         ^^^^^^^^^^^ labeled blocks cannot be `continue`'d
LL | |     }
   | |_____- labeled block the `continue` points to

error[E0695]: unlabeled `continue` inside of a labeled block
  --> $DIR/label_break_value_continue.rs:21:13
   |
LL |             continue;
   |             ^^^^^^^^ `continue` statements that would diverge to or through a labeled block need to bear a label

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0695, E0696.
For more information about an error, try `rustc --explain E0695`.
